examples/test/testpolicy4802.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4802
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key4: value5
      key10: value43
      key26: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value28
      podSelector:
        matchLabels:
          key0: value3
          key6: value18
